--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = ">=3.7.1,<4.0"
 tweepy = "^4.1.0"
 pandas = "^1.3.4"
 ipykernel = "^6.4.2"
+streamlit = "^1.1.0"
+transformers = "^4.11.3"
+psutil = "^5.8.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
