--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,14 @@ numpy = "*"
 streamlit = "*"
 transformers = "*"
 psutil = "*"
+ipykernel = "*"
+torch = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
