--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,16 @@ dmypy.json
 /.DS_Store
 .DS_Store
 
+### VisualStudioCode ###
+.vscode/*
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
 # Models
 .h5
